--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,7 @@
 
   <body>
     <h1>Tetris</h1>
-    <canvas id="holdCanvas"></canvas>
-    <canvas id="mainCanvas"></canvas>
-    <canvas id="nextCanvas"></canvas><canvas id="t" width="200" height="200" style="background-color: green;"></canvas>
+    <h1 id="text"></h1>
   </body>
   <div id="code"></div>
 </html>
