--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,19 @@
 
 <html>
   <head>
+    <script src="http://10.125.98.153:4649/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="./out.js"></script>
     <link rel="stylesheet" type="text/css" href="./index.css">
   </head>
 
   <body>
-    <h1>Tetris</h1>
-    <h1 id="text"></h1>
+    <h1>P1</h1>
+    <h1 id="garbage1">0</h1>
+    <h1>P2</h1>
+    <h1 id="garbage2">0</h1>
+    <!-- <h1>P3</h1>
+    <h1 id="garbage3">0</h1>
+    <h1>P4</h1>
+    <h1 id="garbage4">0</h1> -->
   </body>
-  <div id="code"></div>
 </html>
