--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,19 @@
 
   <body>
     <h1>P1</h1>
-    <h1 id="garbage1">0</h1>
+    <h2 id="garbage1">0</h2>
+    <h2 id="name1"></h2>
+
     <h1>P2</h1>
-    <h1 id="garbage2">0</h1>
-    <!-- <h1>P3</h1>
-    <h1 id="garbage3">0</h1>
+    <h2 id="garbage2">0</h2>
+    <h2 id="name2"></h2>
+
+    <h1>P3</h1>
+    <h2 id="garbage3">0</h2>
+    <h2 id="name3"></h2>
+
     <h1>P4</h1>
-    <h1 id="garbage4">0</h1> -->
+    <h2 id="garbage4">0</h2>
+    <h2 id="name4"></h2>
   </body>
 </html>
