--- a/src/index.html
+++ b/src/index.html
@@ -1,27 +1,10 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
-    <script src="http://10.125.98.153:4649/socket.io/socket.io.js"></script>
-    <script type="text/javascript" src="./out.js"></script>
-    <link rel="stylesheet" type="text/css" href="./index.css">
-  </head>
-
   <body>
-    <h1>P1</h1>
-    <h2 id="garbage1"></h2>
-    <h2 id="name1"></h2>
-
-    <h1>P2</h1>
-    <h2 id="garbage2"></h2>
-    <h2 id="name2"></h2>
-
-    <h1>P3</h1>
-    <h2 id="garbage3"></h2>
-    <h2 id="name3"></h2>
-
-    <h1>P4</h1>
-    <h2 id="garbage4"></h2>
-    <h2 id="name4"></h2>
+    <form action="./main.html">
+      <input type="text" name="name">
+      <input type="submit">
+    </form>
   </body>
 </html>
