--- a/src/main.html
+++ b/src/main.html
@@ -5,32 +5,41 @@
     <!-- <script src="http://10.125.98.153:4649/socket.io/socket.io.js"></script> -->
     <script src="http://localhost:4649/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="./out.js"></script>
-    <link rel="stylesheet" type="text/css" href="./index.css">
+    <link rel="stylesheet" type="text/css" href="./main.css">
   </head>
 
   <body>
-    <h1>P1:<span id="name1"></span></h1>
-    <h2 id="garbage1"></h2>
-    <canvas id="holdCanvas1"></canvas>
-    <canvas id="mainCanvas1"></canvas>
-    <canvas id="nextCanvas1"></canvas>
-
-    <h1>P2:<span id="name2"></span></h1>
-    <h2 id="garbage2"></h2>
-    <canvas id="holdCanvas2"></canvas>
-    <canvas id="mainCanvas2"></canvas>
-    <canvas id="nextCanvas2"></canvas>
-
-    <h1>P3:<span id="name3"></span></h1>
-    <h2 id="garbage3"></h2>
-    <canvas id="holdCanvas3"></canvas>
-    <canvas id="mainCanvas3"></canvas>
-    <canvas id="nextCanvas3"></canvas>
-
-    <h1>P4:<span id="name4"></span></h1>
-    <h2 id="garbage4"></h2>
-    <canvas id="holdCanvas4"></canvas>
-    <canvas id="mainCanvas4"></canvas>
-    <canvas id="nextCanvas4"></canvas>
+    <table border="1" cellpadding="10">
+      <tr>
+        <td>
+          <h2>P1: <span id="name1"></span></h2>
+          <h3>Damage: <span id="garbage1"></span></h3>
+          <canvas id="holdCanvas1"></canvas>
+          <canvas id="mainCanvas1"></canvas>
+          <canvas id="nextCanvas1"></canvas>
+        </td>
+        <td>
+          <h2>P2:<span id="name2"></span></h2>
+          <h3>Damage: <span id="garbage2"></span></h3>
+          <canvas id="holdCanvas2"></canvas>
+          <canvas id="mainCanvas2"></canvas>
+          <canvas id="nextCanvas2"></canvas>
+        </td>
+        <td>
+          <h2>P3:<span id="name3"></span></h2>
+          <h3>Damage: <span id="garbage3"></span></h3>
+          <canvas id="holdCanvas3"></canvas>
+          <canvas id="mainCanvas3"></canvas>
+          <canvas id="nextCanvas3"></canvas>
+        </td>
+        <td>
+          <h2>P4:<span id="name4"></span></h2>
+          <h3>Damage: <span id="garbage4"></span></h3>
+          <canvas id="holdCanvas4"></canvas>
+          <canvas id="mainCanvas4"></canvas>
+          <canvas id="nextCanvas4"></canvas>
+        </td>
+      </tr>
+    </table>
   </body>
 </html>
