--- a/main.html
+++ b/main.html
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+    <center>
+      <input type="button" value="Start Forcibly" onclick="startForcibly()">
+    </center>
     <table border="1" cellpadding="10">
       <tr>
         <td>
