--- a/main.html
+++ b/main.html
@@ -16,28 +16,28 @@
       <tr>
         <td>
           <h2>P1: <span id="name1"></span></h2>
-          <h3>Damage: <span id="garbage1"></span></h3>
+          <h3>Damage: <span id="damage1"></span></h3>
           <canvas id="holdCanvas1"></canvas>
           <canvas id="mainCanvas1"></canvas>
           <canvas id="nextCanvas1"></canvas>
         </td>
         <td>
           <h2>P2:<span id="name2"></span></h2>
-          <h3>Damage: <span id="garbage2"></span></h3>
+          <h3>Damage: <span id="damage2"></span></h3>
           <canvas id="holdCanvas2"></canvas>
           <canvas id="mainCanvas2"></canvas>
           <canvas id="nextCanvas2"></canvas>
         </td>
         <td>
           <h2>P3:<span id="name3"></span></h2>
-          <h3>Damage: <span id="garbage3"></span></h3>
+          <h3>Damage: <span id="damage3"></span></h3>
           <canvas id="holdCanvas3"></canvas>
           <canvas id="mainCanvas3"></canvas>
           <canvas id="nextCanvas3"></canvas>
         </td>
         <td>
           <h2>P4:<span id="name4"></span></h2>
-          <h3>Damage: <span id="garbage4"></span></h3>
+          <h3>Damage: <span id="damage4"></span></h3>
           <canvas id="holdCanvas4"></canvas>
           <canvas id="mainCanvas4"></canvas>
           <canvas id="nextCanvas4"></canvas>
