--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
   <head>
     <!-- <script src="http://10.125.98.153:4649/socket.io/socket.io.js"></script> -->
     <script src="http://localhost:4649/socket.io/socket.io.js"></script>
-    <script type="text/javascript" src="./out.js"></script>
+    <script type="text/javascript" src="./client.js"></script>
     <link rel="stylesheet" type="text/css" href="./main.css">
   </head>
 
